--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
         </div>
       </div>
 
-
+      <section class="katooni-section">
+        <div class="container">
+          <h2 class="section-title">جدیدترین کتونی ها</h2>
+          <div  class="katooni-wrraper">
+            <div class="katooni-item-col">
+              <div class="katooni-card">
+                <div class="card-header">
+                  <img src="./assets/images/katooni1.webp" />
+                </div>
+                <div class="card-body">
+                  <p>مدل کفش : نایک</p>
+                  <p>موجودی : 6 عدد</p>
+                  <p>قیمت : 2,359,000</p>
+                </div>
+              </div>
+            </div>
       <section class="katooni-section">
         <div class="container">
           <h2 class="section-title">جدیدترین کتونی ها</h2>
