--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
+  <script src="app.js"></script>
     <div class="header">
         <nav>
           <h1>فروشگاه کتونی نکست وان کد</h1>
